[package]

name = "unreachable"
version = "0.0.2"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-unreachable.git"
description = "An unreachable code optimization hint in stable rust."
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
void = "0"

